--- a/src/gui/GUI.fxml
+++ b/src/gui/GUI.fxml
@@ -30,6 +30,7 @@
       <CheckBox fx:id="optionSpeed" layoutX="25.0" mnemonicParsing="false" onMouseClicked="#handleSpeedOptionClick" selected="true" text="Maximize text speed and disable attack animations" AnchorPane.leftAnchor="25.0"/>
       <CheckBox fx:id="optionTutorial" layoutX="25.0" mnemonicParsing="false" onMouseClicked="#handleTutorialOptionClick" selected="true" text="Remove tutorial" AnchorPane.leftAnchor="25.0"/>
       <CheckBox fx:id="optionBossAntiCheat" layoutX="25.0" mnemonicParsing="false" onMouseClicked="#handleBossAntiCheatOptionClick" text="Disable boss character setup cheating" AnchorPane.leftAnchor="25.0"/>
+      <CheckBox fx:id="optionRebalanceTrainers" layoutX="25.0" mnemonicParsing="false" onMouseClicked="#handleRebalanceTrainersClick" text="Rebalance trainers" AnchorPane.leftAnchor="25.0"/>
       
       <!-- HP & Retreat Cost Range Controls -->
       <ChoiceBox fx:id="minHP1" layoutX="433.0" prefWidth="75.0" AnchorPane.leftAnchor="433.0"/>
